--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
-
 spring:
   application:
     name: specification-example
 
-
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5433/quest
     username: postgres
     password: root
+    url: jdbc:postgresql://localhost:5433/specification-example
 
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
 
 springdoc:
   swagger-ui:
